--- a/formatted.index.html
+++ b/formatted.index.html
@@ -984,20 +984,16 @@
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
                               <a id="icon-createticket"
-                                 class="itemImageWrapper integrations_icon spriteicon_img icon-createticket" href="#"
-                                 data-toggle="modal" data-target="#demo" target="">
+                                 class="itemImageWrapper integrations_icon spriteicon_img icon-createticket" href="newticket.html"">
                               </a>
-                              <a id="item_createticket" class="itemTextWrapper link" href="#" data-toggle="modal"
-                                 data-target="#demo" target="">Create New Ticket</a>
+                              <a id="item_createticket" class="itemTextWrapper link" href="newticket.html">Create New Ticket</a>
                            </div>
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
                               <a id="icon-ShowTickets"
-                                 class="itemImageWrapper integrations_icon spriteicon_img icon-ShowTickets" href="#"
-                                 data-toggle="modal" data-target="#demo" target="">
+                                 class="itemImageWrapper integrations_icon spriteicon_img icon-ShowTickets" href="opentickets.html">
                               </a>
-                              <a id="item_ShowTickets" class="itemTextWrapper link" href="#" data-toggle="modal"
-                                 data-target="#demo" target="">Open Support Tickets</a>
+                              <a id="item_ShowTickets" class="itemTextWrapper link" href="opentickets.html">Open Support Tickets</a>
                            </div>
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
