--- a/jsdelivr.html
+++ b/jsdelivr.html
@@ -560,9 +560,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-ShowTickets" class="itemImageWrapper integrations_icon spriteicon_img icon-ShowTickets" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-ShowTickets" class="itemImageWrapper integrations_icon spriteicon_img icon-ShowTickets" href="opentickets.html">
                                  </a>
-                                 <a id="item_ShowTickets" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Open Support Tickets</a>
+                                 <a id="item_ShowTickets" class="itemTextWrapper link"  href="opentickets.html">Open Support Tickets</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
